--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "davidzapps.cryptoexchange"
         minSdkVersion 19
@@ -48,4 +48,14 @@ dependencies {
 
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    //
+    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.facebook.fresco:fresco:0.6.1'
+    testCompile 'junit:junit:4.12'
 }
+    
+
+
+
